# shareapp-android

./: README.MD  WORK.MD  tt.csv
LocusApp/: settings.gradle
LocusApp/app/: CMakeLists.txt  build.gradle
LocusApp/app/src/androidTest/java/com/psjbk32/locus/mumbai/: ExampleInstrumentedTest.java
LocusApp/app/src/main/: AndroidManifest.xml
LocusApp/app/src/main/assets/mumbai/train/local/: rmlcl.csv  tf.csv  tt.csv
LocusApp/app/src/main/cpp/: afmod.cpp  decoder.cpp  decoder.h  extstrfuns.h  simpled.cpp  simpled.h  utils.cpp
LocusApp/app/src/main/java/com/psjbk32/locus/mumbai/: HomeScreen.java  LTLActivity.java  MainActivity.java
LocusApp/app/src/main/res/drawable-ldpi/: ic_nwsicon_dark.xml  ic_nwsicon_light.xml  ic_prefsicon_dark.xml  ic_prefsicon_light.xml
LocusApp/app/src/main/res/layout/: activity_home.xml  activity_ltl.xml  activity_main.xml
LocusApp/app/src/main/res/menu/: menu_homescr.xml
LocusApp/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
LocusApp/app/src/test/java/com/psjbk32/locus/mumbai/: ExampleUnitTest.java
LocusApp/gradle/wrapper/: gradle-wrapper.properties
ShareApp/: local.properties  settings.gradle
ShareApp/app/: CMakeLists.txt  build.gradle
ShareApp/app/src/main/: AndroidManifest.xml
ShareApp/app/src/main/assets/: webshare.html
ShareApp/app/src/main/cpp/: afmod.cpp  decoder.cpp  decoder.h  extstrfuns.h  simpled.cpp  simpled.h  utils.cpp
ShareApp/app/src/main/java/com/psj/shareapp/: Splash.java
ShareApp/app/src/main/java/com/psj/shareapp/ui/: HomeActivity.java  RUser.java  Receive.java  Send.java
ShareApp/app/src/main/java/com/psj/shareapp/utils/: Data.java  FTPService.java  NativeCallback.java  NativeOperate.java  PermissionDialog.java  WiFiUtils.java
ShareApp/app/src/main/java/com/psj/shareapp/utils/http/: FileDataHandler.java  SAHS.java  SAHSClient.java
ShareApp/app/src/main/res/layout/: activity_home.xml  activity_receive.xml  activity_ruser.xml  activity_send.xml  activity_splash.xml
ShareApp/app/src/main/res/values/: colors.xml  strings.xml
ShareApp/app/src/test/java/com/psj/shareapp/: ExampleUnitTest.java
ShareApp/gradle/wrapper/: gradle-wrapper.properties
app/src/main/cpp/: extstrfuns.cpp  utils.cpp
app/src/main/res/layout/: activity_splash.xml
app/src/main/res/values/: colors.xml  strings.xml
asset-info/: local_cr_dn_tt.xlsx  local_cr_up_tt.xlsx
examples/ShareMe/com.xiaomi.midrop/: AndroidManifest.xml  info.json
examples/ShareMe/com.xiaomi.midrop/src/assets/: crashlytics-build.properties
examples/ShareMe/com.xiaomi.midrop/src/java/a/: a.java  (+12 more)
(+1884 files in other folders)
